2011-04-11  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/PkgInfo.py: Updated to 1.1.0-beta1
	* NEWS: Updated.
	* s3cmd.1: Regenerated.

2011-04-11  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/Config.py: Increase socket_timeout from 10 secs to 5 mins.

2011-04-10  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/CloudFront.py, S3/S3Uri.py: Support for checking 
	  status of CF Invalidation Requests [cfinvalinfo].
	* s3cmd, S3/CloudFront.py, S3/Config.py: Support for CloudFront
	  invalidation using [sync --cf-invalidate] command.
	* S3/Utils.py: getDictFromTree() now recurses into
	  sub-trees.

2011-03-30  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/CloudFront.py: Fix warning with Python 2.7
	* S3/CloudFront.py: Cmd._get_dist_name_for_bucket() moved to
	  CloudFront class.

2011-01-13  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/FileLists.py: Move file/object listing functions
	  to S3/FileLists.py

2011-01-09  Michal Ludvig  <mludvig@logix.net.nz>

	* Released version 1.0.0
	  ----------------------

	* S3/PkgInfo.py: Updated to 1.0.0
	* NEWS: Updated.

2011-01-02  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Improved r457 (Don't crash when file disappears
	  before checking MD5).
	* s3cmd, s3cmd.1, format-manpage.pl: Improved --help text
	  and manpage.
	* s3cmd: Removed explicit processing of --follow-symlinks
	  (is cought by the default / main loop).

2010-12-24  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Set 10s socket timeout for read()/write().
	* s3cmd: Added --(no-)check-md5 for [sync].
	* run-tests.py, testsuite.tar.gz: Added testsuite for
	  the above.
	* NEWS: Document the above.
	* s3cmd: Don't crash when file disappears before
	  checking MD5.

2010-12-09  Michal Ludvig  <mludvig@logix.net.nz>

	* Released version 1.0.0-rc2
	  --------------------------

	* S3/PkgInfo.py: Updated to 1.0.0-rc2
	* NEWS, TODO, s3cmd.1: Updated.

2010-11-13  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Added support for remote-to-remote sync.