@@ -1,5 +1,10 @@
 2011-04-11  Michal Ludvig  <mludvig@logix.net.nz>
 
+	* S3/CloudFront.py: Don't fail if there are no cfinval
+	  requests.
+
+2011-04-11  Michal Ludvig  <mludvig@logix.net.nz>
+
 	* S3/PkgInfo.py: Updated to 1.1.0-beta1
 	* NEWS: Updated.
 	* s3cmd.1: Regenerated.
